--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "spresnac/laravel-create-user-cli": "^1.0"
+        "spatie/laravel-medialibrary": "^10.0.0",
+        "spresnac/laravel-create-user-cli": "^1.0",
+        "tinymce/tinymce": "^6.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
